--- a/index.html
+++ b/index.html
@@ -1,248 +1,282 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<title>Photo Booth @saphasena68</title>
-<style>
-  body{
-    margin:0; font-family:'Nunito',sans-serif; background:#f0f8ff;
-    display:flex; flex-direction:column; align-items:center; justify-content:center; min-height:100vh;
-  }
-  .booth{
-    position:relative; width:360px; padding:16px;
-    background:#fff; border-radius:16px;
-    box-shadow:0 6px 20px rgba(0,0,0,0.15);
-    border:4px solid #87cefa;
-    overflow:hidden;
-  }
-  h2{
-    text-align:center; margin:0 0 8px; color:#333;
-    font-size:18px; font-weight:700;
-  }
-  video{ width:100%; border-radius:12px; }
-  .countdown{
-    position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
-    font-size:72px; font-weight:bold; color:#fff;
-    text-shadow:0 0 20px #000;
-    display:none; pointer-events:none;
-  }
-  .thumbs{ display:flex; justify-content:space-between; margin-top:10px; }
-  .thumb{
-    width:30%; aspect-ratio:3/4; background:#e0f7ff; border-radius:8px;
-    display:flex; align-items:center; justify-content:center;
-    font-size:20px; font-weight:bold; color:#555; overflow:hidden;
-    position:relative; transition:all .3s;
-  }
-  .thumb img{ width:100%; height:100%; object-fit:cover; border-radius:8px; }
-  .thumb.captured{ animation: pop 0.4s ease; border:2px solid #ffd54f; }
-  .thumb.next{ animation: blink 1s infinite; border:2px dashed #ffd54f; }
-  @keyframes pop{
-    0%{transform:scale(0.9);opacity:0.5;}
-    70%{transform:scale(1.05);opacity:1;}
-    100%{transform:scale(1);}
-  }
-  @keyframes blink{
-    0%,100%{opacity:1;}
-    50%{opacity:0.4;}
-  }
-  .controls{ margin-top:10px; text-align:center; }
-  button{
-    background:#87cefa; border:none; padding:8px 16px;
-    border-radius:18px; font-size:14px; cursor:pointer; margin:4px;
-    font-family:'Nunito',sans-serif;
-  }
-  button:disabled{opacity:0.5; cursor:not-allowed;}
-  .stars{
-    position:absolute; inset:0; pointer-events:none;
-  }
-  .star{
-    position:absolute; background:#ffd54f; border-radius:50%;
-  }
-</style>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Photo Booth @saphasena68</title>
+  <style>
+    body{
+      font-family: 'Poppins', sans-serif;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      background:#f0f8ff;
+    }
+    h1{
+      margin:10px;
+      font-size:24px;
+      color:#333;
+    }
+    video{
+      border:3px solid #87CEEB;
+      border-radius:12px;
+      margin-bottom:10px;
+      max-width:90%;
+    }
+    .controls{
+      margin:10px;
+    }
+    button{
+      padding:10px 16px;
+      margin:0 6px;
+      border:none;
+      border-radius:6px;
+      background:#87CEEB;
+      color:#fff;
+      font-size:16px;
+      cursor:pointer;
+    }
+    button:hover{
+      background:#5bb4d6;
+    }
+    .countdown{
+      font-size:48px;
+      color:#FFD700;
+      font-weight:bold;
+      margin:15px;
+    }
+    .status{
+      font-size:18px;
+      color:#555;
+      margin-bottom:8px;
+    }
+    .preview{
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      background:#fff;
+      width:300px;
+      padding:12px;
+      border:4px solid #87CEEB;
+      border-radius:16px;
+      position:relative;
+    }
+    .stars{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      pointer-events:none;
+      overflow:hidden;
+    }
+    .star{
+      position:absolute;
+      background:yellow;
+      border-radius:50%;
+      opacity:0.8;
+    }
+    .thumb{
+      width:90%;
+      aspect-ratio:3/4;
+      margin:6px 0;
+      border:2px solid #87CEEB;
+      border-radius:10px;
+      overflow:hidden;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .thumb img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      border-radius:8px;
+    }
+    canvas{display:none;}
+  </style>
 </head>
 <body>
-  <div class="booth">
-    <h2>Photo Booth @saphasena68</h2>
-    <video id="video" autoplay playsinline></video>
-    <div id="countdown" class="countdown"></div>
-    <div class="thumbs">
-      <div class="thumb">1</div>
-      <div class="thumb">2</div>
-      <div class="thumb">3</div>
-    </div>
-    <div class="controls">
-      <button id="startBtn">เริ่มถ่าย</button>
-      <button id="retakeBtn" disabled>ถ่ายใหม่</button>
-      <button id="downloadBtn" disabled>ดาวน์โหลด</button>
-      <button id="printBtn" disabled>พิมพ์รูป</button>
-    </div>
+  <h1>Photo Booth @saphasena68</h1>
+  <video id="video" autoplay></video>
+  <div class="controls">
+    <button id="startBtn">ถ่ายรูป</button>
+    <button id="downloadBtn">ดาวน์โหลด</button>
+    <button id="printBtn">พิมพ์รูป</button>
+  </div>
+  <div class="countdown" id="countdown"></div>
+  <div class="status" id="status"></div>
+  <div class="preview" id="preview">
     <div class="stars" id="stars"></div>
   </div>
+  <canvas id="canvas"></canvas>
+  <audio id="shutter" src="https://www.soundjay.com/mechanical/camera-shutter-click-03.mp3" preload="auto"></audio>
 
-  <!-- เสียงแชะ -->
-  <audio id="shutterSound" preload="auto">
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_17808e58d2.mp3?filename=camera-shutter-click-03-10769.mp3" type="audio/mp3">
-  </audio>
+  <script>
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    const startBtn = document.getElementById('startBtn');
+    const downloadBtn = document.getElementById('downloadBtn');
+    const printBtn = document.getElementById('printBtn');
+    const countdownEl = document.getElementById('countdown');
+    const statusEl = document.getElementById('status');
+    const preview = document.getElementById('preview');
+    const shutter = document.getElementById('shutter');
+    const starsContainer = document.getElementById('stars');
 
-<script>
-const video=document.getElementById('video');
-const startBtn=document.getElementById('startBtn');
-const retakeBtn=document.getElementById('retakeBtn');
-const downloadBtn=document.getElementById('downloadBtn');
-const printBtn=document.getElementById('printBtn');
-const countdown=document.getElementById('countdown');
-const thumbs=[...document.querySelectorAll('.thumb')];
-const stars=document.getElementById('stars');
-const shutterSound=document.getElementById('shutterSound');
-let captures=[];
+    let captures = [];
 
-// เปิดกล้อง
-navigator.mediaDevices.getUserMedia({video:true}).then(stream=>{
-  video.srcObject=stream;
-});
+    // Camera
+    navigator.mediaDevices.getUserMedia({video:true})
+      .then(stream => video.srcObject = stream);
 
-// สร้างดาวสุ่ม (แบบเรียบๆ มินิมอล)
-function makeStars(){
-  for(let i=0;i<30;i++){
-    const s=document.createElement('div');
-    const size=Math.random()*6+3;
-    s.className='star';
-    s.style.width=s.style.height=size+'px';
-    s.style.left=Math.random()*100+'%';
-    s.style.top=Math.random()*100+'%';
-    stars.appendChild(s);
-  }
-}
-makeStars();
+    // Countdown capture
+    async function captureSequence(){
+      captures = [];
+      preview.querySelectorAll('.thumb').forEach(t=>t.remove());
 
-// countdown
-function showCountdown(n){countdown.style.display='block';countdown.textContent=n;}
-function hideCountdown(){countdown.style.display='none';}
+      for(let i=0;i<3;i++){
+        statusEl.textContent = `กำลังถ่ายรูปที่ ${i+1}/3`;
+        await countdown(3);
+        const shot = captureImage();
+        captures.push(shot);
+        addThumbnail(shot);
+        shutter.play();
+        await new Promise(r=>setTimeout(r,600));
+      }
+      statusEl.textContent = "ถ่ายครบแล้ว ✔";
+    }
 
-// capture frame
-function captureFrame(){
-  const c=document.createElement('canvas');
-  c.width=video.videoWidth; c.height=video.videoHeight;
-  c.getContext('2d').drawImage(video,0,0,c.width,c.height);
-  return c.toDataURL('image/jpeg');
-}
+    function countdown(sec){
+      return new Promise(resolve=>{
+        let s = sec;
+        countdownEl.textContent = s;
+        const timer = setInterval(()=>{
+          s--;
+          if(s>0){
+            countdownEl.textContent = s;
+          } else {
+            clearInterval(timer);
+            countdownEl.textContent = "";
+            resolve();
+          }
+        },1000);
+      });
+    }
 
-// flash
-function doFlash(){
-  const flash=document.createElement('div');
-  flash.style.position='fixed';flash.style.inset='0';
-  flash.style.background='white';flash.style.opacity='0.95';
-  flash.style.transition='opacity 170ms';flash.style.zIndex='999';
-  document.body.appendChild(flash);
-  setTimeout(()=>{flash.style.opacity='0';setTimeout(()=>flash.remove(),200);},120);
-}
+    function captureImage(){
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      ctx.drawImage(video,0,0);
+      return canvas.toDataURL("image/png");
+    }
 
-// ถ่าย 3 รูป
-async function takeThreeShots(){
-  startBtn.disabled = true; retakeBtn.disabled = true;
-  captures = [null,null,null];
-  thumbs.forEach((el,i)=>{ el.classList.remove('captured','next'); el.innerHTML=`${i+1}` });
+    function addThumbnail(src){
+      const div = document.createElement('div');
+      div.className="thumb";
+      const img = document.createElement('img');
+      img.src = src;
+      div.appendChild(img);
+      preview.appendChild(div);
+    }
 
-  for(let i=0;i<3;i++){
-    thumbs[i].classList.add('next');
-    for(let s=3;s>=1;s--){ showCountdown(s); await new Promise(r=>setTimeout(r,800)); }
-    hideCountdown();
-    thumbs[i].classList.remove('next');
+    // Draw rounded rectangle
+    function roundRect(ctx, x, y, w, h, r){
+      ctx.beginPath();
+      ctx.moveTo(x+r, y);
+      ctx.lineTo(x+w-r, y);
+      ctx.quadraticCurveTo(x+w, y, x+w, y+r);
+      ctx.lineTo(x+w, y+h-r);
+      ctx.quadraticCurveTo(x+w, y+h, x+w-r, y+h);
+      ctx.lineTo(x+r, y+h);
+      ctx.quadraticCurveTo(x, y+h, x, y+h-r);
+      ctx.lineTo(x, y+r);
+      ctx.quadraticCurveTo(x, y, x+r, y);
+      ctx.closePath();
+    }
 
-    // เสียง + flash
-    shutterSound.currentTime=0; shutterSound.play();
-    doFlash();
+    function drawImageInFrame(ctx, imgSrc, x, y, w, h, r){
+      return new Promise((resolve,reject)=>{
+        const img = new Image();
+        img.onload = function(){
+          ctx.save();
+          roundRect(ctx, x, y, w, h, r);
+          ctx.clip();
+          const ratio = Math.max(w / img.width, h / img.height);
+          const nw = img.width * ratio;
+          const nh = img.height * ratio;
+          const dx = x + (w-nw)/2;
+          const dy = y + (h-nh)/2;
+          ctx.drawImage(img, dx, dy, nw, nh);
+          ctx.restore();
+          resolve();
+        };
+        img.onerror = reject;
+        img.src = imgSrc;
+      });
+    }
 
-    const data=captureFrame(); captures[i]=data;
-    thumbs[i].innerHTML=`<img src="${data}">`;
-    thumbs[i].classList.add('captured');
+    downloadBtn.addEventListener('click', async()=>{
+      if(captures.length<3){alert("ถ่ายให้ครบก่อน"); return;}
+      const dpi = 300, inchW=4, inchH=6;
+      canvas.width = inchW*dpi;
+      canvas.height = inchH*dpi;
+      ctx.fillStyle="#f0f8ff";
+      ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    await new Promise(r=>setTimeout(r,600));
-  }
-  startBtn.disabled = false; retakeBtn.disabled = false; downloadBtn.disabled = false; printBtn.disabled=false;
-}
+      // Border
+      ctx.lineWidth = 20;
+      ctx.strokeStyle="#87CEEB";
+      roundRect(ctx,10,10,canvas.width-20,canvas.height-20,40);
+      ctx.stroke();
 
-// รวมเป็นไฟล์ดาวน์โหลด
-downloadBtn.addEventListener('click',()=>saveOrPrint(false));
-printBtn.addEventListener('click',()=>saveOrPrint(true));
+      // Title
+      ctx.fillStyle="#333";
+      ctx.font="bold 72px Poppins";
+      ctx.textAlign="center";
+      ctx.fillText("Photo Booth @saphasena68", canvas.width/2,100);
 
-async function saveOrPrint(isPrint){
-  if(captures.length<3) return;
-  const w=1200,h=1800;
-  const canvas=document.createElement('canvas');
-  canvas.width=w;canvas.height=h;
-  const ctx=canvas.getContext('2d');
+      const photoW = canvas.width*0.7;
+      const photoX = (canvas.width-photoW)/2;
+      const singleH = (canvas.height-300)/3;
+      let y = 150;
 
-  ctx.fillStyle='#f0f8ff'; ctx.fillRect(0,0,w,h);
+      for(let i=0;i<3;i++){
+        await drawImageInFrame(ctx, captures[i], photoX, y, photoW, singleH, 40);
+        y += singleH + 20;
+      }
 
-  // ดาว
-  for(let i=0;i<40;i++){
-    const size=Math.random()*10+4;
-    ctx.fillStyle='#ffd54f';
-    ctx.beginPath();
-    ctx.arc(Math.random()*w,Math.random()*h,size,0,Math.PI*2);
-    ctx.fill();
-  }
+      const link=document.createElement('a');
+      link.download="photobooth.png";
+      link.href=canvas.toDataURL("image/png");
+      link.click();
+    });
 
-  ctx.strokeStyle='#87cefa'; ctx.lineWidth=12;
-  ctx.strokeRect(20,20,w-40,h-40);
+    printBtn.addEventListener('click', ()=>{
+      if(captures.length<3){alert("ถ่ายให้ครบก่อน"); return;}
+      const dataUrl = canvas.toDataURL("image/png");
+      const win = window.open("");
+      win.document.write(`<img src="${dataUrl}" style="width:100%">`);
+      win.print();
+    });
 
-  ctx.fillStyle='#333';
-  ctx.font='bold 42px Nunito'; ctx.textAlign='center';
-  ctx.fillText('Photo Booth @saphasena68',w/2,80);
+    startBtn.addEventListener('click',captureSequence);
 
-  const margin=80; const photoW=w-2*margin; const singleH=(h-220)/3;
-  for(let i=0;i<3;i++){
-    const y=120+i*singleH+20*i;
-    await drawImageInFrame(ctx,captures[i],margin,y,photoW,singleH,20);
-  }
-
-  if(isPrint){
-    const win=window.open();
-    win.document.write('<img src="'+canvas.toDataURL('image/png')+'" style="width:100%">');
-    win.print();
-  }else{
-    const link=document.createElement('a');
-    link.download='photobooth.png';
-    link.href=canvas.toDataURL('image/png');
-    link.click();
-  }
-}
-
-function roundRect(ctx,x,y,width,height,r){
-  ctx.beginPath();
-  ctx.moveTo(x+r,y);
-  ctx.lineTo(x+width-r,y);
-  ctx.quadraticCurveTo(x+width,y,x+width,y+r);
-  ctx.lineTo(x+width,y+height-r);
-  ctx.quadraticCurveTo(x+width,y+height,x+width-r,y+height);
-  ctx.lineTo(x+r,y+height);
-  ctx.quadraticCurveTo(x,y+height,x,y+height-r);
-  ctx.lineTo(x,y+r);
-  ctx.quadraticCurveTo(x,y,x+r,y);
-  ctx.closePath();
-}
-
-function drawImageInFrame(ctx,src,x,y,w,h,r){
-  return new Promise((resolve,reject)=>{
-    const img=new Image();
-    img.onload=function(){
-      ctx.save(); roundRect(ctx,x,y,w,h,r); ctx.clip();
-      const ratio=Math.max(w/img.width,h/img.height);
-      const nw=img.width*ratio, nh=img.height*ratio;
-      const dx=x+(w-nw)/2, dy=y+(h-nh)/2;
-      ctx.drawImage(img,dx,dy,nw,nh); ctx.restore();
-      ctx.strokeStyle='#87cefa'; ctx.lineWidth=6;
-      roundRect(ctx,x,y,w,h,r); ctx.stroke();
-      resolve();
-    };
-    img.onerror=reject; img.src=src;
-  });
-}
-
-startBtn.onclick=takeThreeShots;
-retakeBtn.onclick=takeThreeShots;
-</script>
+    // Generate minimal stars
+    function generateStars(){
+      for(let i=0;i<40;i++){
+        const s = document.createElement('div');
+        s.className="star";
+        const size = Math.random()*6+3;
+        s.style.width = size+"px";
+        s.style.height = size+"px";
+        s.style.left = Math.random()*100+"%";
+        s.style.top = Math.random()*100+"%";
+        starsContainer.appendChild(s);
+      }
+    }
+    generateStars();
+  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </body>
 </html>
